Fixed markup, fixed right context menu for right mouse click (visible like simple a-tag link, but in real using routeLink)

--- a/src/app/modules/general/item-view/item-view.component.css
+++ b/src/app/modules/general/item-view/item-view.component.css
@@ -38,12 +38,17 @@ h2 {
   cursor: pointer;
 }
 
+.disable-link{
+  text-decoration: none;
+  color: black;
+}
+
 nz-breadcrumb{
   margin-bottom: 0.5em;
 }
 
-nz-breadcrumb-item:last-child{
-  cursor: auto;
+nz-breadcrumb-item:last-child a{
+  cursor: default;
 }
 
 nz-tag {
